--- a/src/main/resources/templates/Form.html
+++ b/src/main/resources/templates/Form.html
@@ -5,7 +5,7 @@
     <title>Form</title>
 </head>
 <body>
-    <h1>Hvað villtu nota?</h1>
-    <p>Hmmm?</p>
+    <h1>What ingredients?</h1>
+    <h3>Welcome, Enter The Employee Details</h3>
 </body>
 </html>
