--- a/src/main/resources/templates/Velkominn.html
+++ b/src/main/resources/templates/Velkominn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fridge Buddy</title>
-    <link rel="stylesheet" href="${homeCss}">
+    <link rel="stylesheet" href="../Static/css/styleHome.css" th:href="@{/css/styleHome.css}">
 </head>
 <body>
     <h1>Fridge Buddy</h1>
