--- a/src/main/resources/templates/Velkominn.html
+++ b/src/main/resources/templates/Velkominn.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Fridge Buddy</h1>
     <h3>What should we have for dinner?</h3>
-    <div th:switch="${recipes}">
+    <div th:switch="${Recipes}">
         <h2 th:case="null">No recipes yet!</h2>
         <div th:case="*">
             <h2>Recipes</h2>
@@ -23,7 +23,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="recipe : ${recipes}">
+                <tr th:each="recipe : ${Recipes}">
                     <td th:text="${recipe.name}"></td>
                     <td th:text="${recipe.description}"></td>
                     <td th:text="${recipe.rating}"></td>
