--- a/src/main/resources/templates/add-recipe.html
+++ b/src/main/resources/templates/add-recipe.html
@@ -11,7 +11,7 @@
     <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     <label for="description">Description</label>
     <input type="text" th:field="*{description}" id="description" placeholder="Description">
-    <span th:if="${#fields.hasErrors('description')}" th:errors="*{decription}"></span>
+    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
     <label for="rating">Rating</label>
     <input type="number" th:field="*{rating}" id="rating" placeholder="Rating">
     <span th:if="${#fields.hasErrors('rating')}" th:errors="*{rating}"></span>
