--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,6 +36,8 @@
         <p><a href="/addrecipe">Add a new recipe</a></p>
         <p><a href="/recipeSearch">Search</a> for a recipe by name</p>
         <p><a href="/makedata">Generate data</a></p>
+        <p><a href="/login">Log in to your account</a></p>
+        <p><a href="/signup">Add a new user</a></p>
     </div>
 </body>
 </html>
