"style update on forms and home page"

--- a/src/main/resources/templates/add-recipe.html
+++ b/src/main/resources/templates/add-recipe.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Fridge Buddy</title>
-    <link rel="stylesheet" href="../Static/css/styleHome.css" th:href="@{/css/styleHome.css}">
+    <link rel="stylesheet" href="../Static/css/styleForm.css" th:href="@{/css/styleForm.css}">
+    <link rel="stylesheet" href="../Static/css/styleAdd.css" th:href="@{/css/styleAdd.css}">
 </head>
 <body>
 <div class="pagewrap">
