--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fridge Buddy</title>
-    <link rel="stylesheet" href="../Static/css/styleHome.css" th:href="@{/css/styleHome.css}">
+    <link rel="stylesheet" href="../Static/css/styleForm.css" th:href="@{/css/styleForm.css}">
 </head>
     <body>
         <h2>Search for Recipes</h2>
