--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
-    <link rel="stylesheet" href="../Static/css/styleHome.css" th:href="@{/css/styleHome.css}">
+    <link rel="stylesheet" href="../Static/css/styleForm.css" th:href="@{/css/styleForm.css}">
 </head>
 <body>
 <div th:switch="${users}">
