--- a/src/main/resources/Static/css/styleHome.css
+++ b/src/main/resources/Static/css/styleHome.css
@@ -1,6 +1,6 @@
 *{box-sizing: border-box;margin: 0;padding: 0; outline: none; transition: all 0.3s ease; animation-delay: 0s;}
 
-.pagewrap {max-width: 100%; height: 100vh; margin: 0 auto; display: flex; justify-content: center; align-items: center;}
+.pagewrap {max-width: 100%; min-height: 100vh; margin: 0 auto; display: flex; justify-content: center; align-items: center;}
 
 body{
     background: #74ebd5;
@@ -31,5 +31,57 @@ body{
     text-transform: uppercase;
     text-decoration: none;
     color: white;
+    box-shadow: -2px 2px #67a1ca8f;
+}
+
+.container {
+    background-color: #ecedee;
+    padding: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    margin: 40px
+}
+
+a{
+    text-decoration: none;
+    color: #646464;
+}
+
+h2{
+    margin-bottom: 5px;
+}
+
+table {
+    width: 800px;
+    border-collapse: collapse;
+    overflow: hidden;
+}
+th,
+td {
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.3);
+    color: #646464;
+}
+th {
+    text-align: left;
+}
+thead th {
+    background-color: skyblue;
+    color: white;
+}
+tbody tr:hover {
+    background-color: rgba(178, 241, 255, 0.4);
+}
+tbody td {
+    position: relative;
+}
+tbody td:hover:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -9999px;
+    bottom: -9999px;
+    background-color: rgba(178, 241, 255, 0.4);
+    z-index: -1;
 }
 
