--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -5,10 +5,21 @@
     <title>Login</title>
     <link rel="stylesheet" href="../Static/css/styleForm.css" th:href="@{/css/styleForm.css}">
 </head>
+<div class="header">
+    <div class="headings">
+        <h1>Fridge Buddy</h1>
+        <h3>What should we have for dinner?</h3>
+    </div>
+    <div class="link">
+        <a class="link_button" href="/">Home</a>
+        <a class="link_button" href="/signup">Sign up</a>
+    </div>
+</div>
 <body>
     <div class="pagewrap">
         <form class="form" action="#" th:action="@{/login}" th:object="${user}"  method="post">
             <h3 class="form_title">Login to your account</h3>
+            <div class="form_error" th:switch="${error}" th:text="${error}"></div>
             <div class="container">
                 <label class="container_label" for="username">Username</label>
                 <input class="container_input" type="text" name="username" id="username" th:field="*{UName}"/>
