--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,11 +5,27 @@
     <title>Fridge Buddy</title>
     <link rel="stylesheet" href="../Static/css/styleForm.css" th:href="@{/css/styleForm.css}">
 </head>
-    <body>
-        <h2>Search for Recipes</h2>
-        <form action="#" th:action="@{/recipeSearch}" th:object="${recipe}"  method="post">
-            <input type="text" name="search" id="search" th:value="${search}"/>
-            <input type="submit" value="Search"/>
-        </form>
-    </body>
+<body>
+    <div class="header">
+        <div class="headings">
+            <h1>Fridge Buddy</h1>
+            <h3>What should we have for dinner?</h3>
+        </div>
+        <div class="link">
+            <a class="link_button" href="/">Home</a>
+            <a class="link_button" href="/login">Login</a>
+        </div>
+    </div>
+    <div class="pagewrap">
+    <form class="form" action="#" th:action="@{/recipeSearch}" th:object="${recipe}"  method="post">
+        <h3 class="form_title">Search for Recipes</h3>
+        <div class="form_error" th:switch="${error}" th:text="${error}"></div>
+        <div class="container">
+            <label class="container_label" for="search">Seach by name</label>
+            <input class="container_input" type="text" name="search" id="search" th:value="${search}"/>
+        </div>
+        <input class="form_submit" type="submit" value="Search"/>
+    </form>
+    </div>
+</body>
 </html>
