--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -6,26 +6,30 @@
     <link rel="stylesheet" href="../Static/css/styleForm.css" th:href="@{/css/styleForm.css}">
 </head>
 <body>
-<!--<h2>Create your account</h2>
-<form action="#" th:action="@{/signup}" th:object="${user}"  method="post">
-    <input type="text" name="username" id="username" th:field="*{UName}"/>
-    <input type="password" name="password" id="password" th:value="*{password}"/>
-    <input type="submit" value="Sign up"/>
-
-</form>-->
-<div class="pagewrap">
-    <form class="form" action="#" th:action="@{/signup}" th:object="${user}"  method="post">
-        <h3 class="form_title">Create your Fridge Buddy account</h3>
-        <div class="container">
-            <label class="container_label" for="username">Username</label>
-            <input class="container_input" type="text" name="username" id="username" th:field="*{UName}"/>
+    <div class="header">
+        <div class="headings">
+            <h1>Fridge Buddy</h1>
+            <h3>What should we have for dinner?</h3>
         </div>
-        <div class="container">
-            <label class="container_label" for="password">Password</label>
-            <input class="container_input" type="password" name="password" id="password" th:value="*{password}"/>
+        <div class="link">
+            <a class="link_button" href="/">Home</a>
+            <a class="link_button" href="/login">Login</a>
         </div>
-        <input class="form_submit" type="submit" value="Sign up"/>
-    </form>
-</div>
+    </div>
+    <div class="pagewrap">
+        <form class="form" action="#" th:action="@{/signup}" th:object="${user}"  method="post">
+            <h3 class="form_title">Create your Fridge Buddy account</h3>
+            <div class="form_error" th:switch="${error}" th:text="${error}"></div>
+            <div class="container">
+                <label class="container_label" for="username">Username</label>
+                <input class="container_input" type="text" name="username" id="username" th:field="*{UName}"/>
+            </div>
+            <div class="container">
+                <label class="container_label" for="password">Password</label>
+                <input class="container_input" type="password" name="password" id="password" th:value="*{password}"/>
+            </div>
+            <input class="form_submit" type="submit" value="Sign up"/>
+        </form>
+    </div>
 </body>
 </html>
