--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
             <a class="link_button" href="/addrecipe">Add a recipe</a>
             <a class="link_button" href="/login">Login</a>
             <a class="link_button" href="/signup">Sign up</a>
+            <a class="link_button" href="/searchIngredients">Search by ingredients</a>
         </div>
     </div>
     <div class="pagewrap" th:switch="${Recipes}">
