--- a/src/main/resources/Static/css/styleRecipe.css
+++ b/src/main/resources/Static/css/styleRecipe.css
@@ -72,6 +72,10 @@ body{
     justify-content: space-between;
 }
 
+.descr{
+    margin: 5px;
+}
+
 .image{
     width: 500px;
     height: 300px;
@@ -82,14 +86,46 @@ body{
 }
 
 .rate_form{
+    font-size: 18px;
+    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding: 5px;
+    background-color: #ecedee;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
-
 
 .ingred{
     margin: 5px;
 }
 
+.form_input {
+    -webkit-appearance: none;
+    width: 25%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
 
+.form_input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: skyblue;
+    cursor: pointer;
+}
+
+.form_input::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: skyblue;
+    cursor: pointer;
+}
